# modern_cpp_game_demo

./: CMakeLists.txt  LICENSE  main.cpp  vcpkg.json
demo/: async_io.hpp  file_dialog.hpp  text.hpp
src/coro/: event.hpp  exclusive_event.hpp  fire_and_forget.hpp  generator.hpp  profiler.hpp  profiler_gui.hpp  race.hpp  scheduler.hpp  stage.hpp  task.hpp  timeout.hpp
src/coro/events/: event.hpp  exclusive.hpp  permanent.hpp
src/coro/exp/: scheduler.hpp
src/coro/exp/events/: event.hpp
src/utils/: compressed_pair.hpp  func_name.hpp
